--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,12 +4,6 @@
 <nav>
     {{ $currentPage := . }}
     {{ range .Site.Menus.main }}
-    <a class="{{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }} active{{end}}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
-    {{ end }}
-</nav>
-<nav>
-    {{ $currentPage := . }}
-    {{ range .Site.Menus.sub }}
-    <a class="{{if or ($currentPage.IsMenuCurrent "sub" .) ($currentPage.HasMenuCurrent "sub" .) }} active{{end}}" href="{{ .URL }}" title="{{ .Title }}">{{ .Parent }}llll</a>
+    <a href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
     {{ end }}
 </nav>
