make participants page dynamic

--- a/layouts/partials/participants.html
+++ b/layouts/partials/participants.html
@@ -1,7 +1,47 @@
 <p>This page lists all organisations participating in the NLNOG RING.</p>
 
-<script type="text/javascript" src="https://ring.nlnog.net/images/ring-logos/counters.js"></script>
+<script
+            src="https://code.jquery.com/jquery-3.5.0.min.js"
+    integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+    crossorigin="anonymous"></script>
+
+<script>
+var participants = Array();
+$.ajax({
+    url: '/scripts/participants.cgi',
+    dataType: 'json',
+    success: function(response) {
+                    generate_html(response);
+                }
+});
+function generate_html(data) {
+$('#counters').append(
+        '<li>Organisations: <strong>' + data.counters.orgs + '</strong</i>');
+$('#counters').append(
+        '<li>RING nodes: <strong>' + data.counters.nodes + '</strong</i>');
+$('#counters').append(
+        '<li>ASNs: <strong>' + data.counters.asns + '</strong</i>');
+$('#counters').append(
+        '<li>Countries: <strong>' + data.counters.countries + '</strong</i>');
+
+for (const [ p, participant ] of Object.entries(data.participants)) {
+        var machines = participant['machines'].join(', ');
+        var asnlist = [];
+        participant['asns'].forEach(function (asn, a) {
+                asnlist.push('<a href="http://www.ris.ripe.net/dashboard/AS' + asn + '">' + asn + '</a>');
+        });
+        var asns = asnlist.join(', ');
+        $('#participants').append(
+                '<hr><table><tr><td width="300px" style="vertical-align: middle; text-align:center;"><img src="/images/ring-logos/' + participant['logo'] + '" /></td><td style="vertical-align: middle;"><h3>' + participant['name'] + '</h3><ul><li>website: <a title="' + participant['url'] + '" href="' + participant['url'] + '" target="_blank">' + participant['url'] + '</a></li><li>machines: ' + machines + '</li><li>ASNs: ' + asns + '</li><ul></td></tr></table>'
+        );
+    }
+}
+</script>
+
+<ul id="counters">
+</ul>
 
 <p>Click <a href="http://map.ring.nlnog.net/">here</a> to view the NLNOG RING on a map.</p>
 
-<script type="text/javascript" src="https://ring.nlnog.net/images/ring-logos/participants.js"></script>
+<div id='participants'>
+</div>
