fix up patron page layout

--- a/static/css/ring.css
+++ b/static/css/ring.css
@@ -5,6 +5,9 @@ article header h1 {
     font-weight: 600;
 }
 
-table, th, td {
+table, th, td, tr {
     border: 0px;
+}
+th {
+    background-color: white;
 }
