--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -1,1 +1,45 @@
-<p>Placeholder</p>
+<form id="application-form">
+
+    <h3>Participant information</h3>
+    <p>Company name (required)</p>
+    <input type="text" id="company" name=company" required="true" size="40"/>
+    <p>Company description (for the <a href="/news">news</a> page)</p>
+    <textarea id="companydesc" name="companydesc" cols="60" rows="5"></textarea>
+    <p>Company website (required)</p>
+    <input type="text" id="url" name="url" required="true" size="40" value="https://"/>
+    <p>Company logo (.png, .jpg or .jpeg, required)</p>
+    <input type="file" id="logo" name="logo" accept=".png,.jpg,.jpeg" required="true">
+    <p>Your name (required)</p>
+    <input type="text" id="contact" name="contact" required="true" size="40"/>
+    <p>Your e-mail (required)</p>
+    <input type="text" id="email" name="email" required="true" size="40"/>
+    <p>NOC e-mail address (preferably not 1st line support queue ;-), (required)</p>
+    <input type="text" id="nocemail" name="nocemail" required="true" size="40"/>
+
+    <h3>Node information</h3>
+    <p>Autonomous System number (required)</p>
+    <input type="text" id="autnum" name="autnum" required="true" size="20"/>
+    <p>IPv6 address (required)</p>
+    <input type="text" id="ipv6" name="ipv6" required="true" size="40"/>
+    <p>IPv4 address</p>
+    <input type="text" id="ipv4" name="ipv4" size="40"/>
+    <p>ISO 3166-1 alpha-2 country code (e.g. 'NL', required)</p>
+    <select id="countrycode" name="countrycode" required="true">
+    </select>
+    <p>ISO 3166-2 state code (e.g. 'CA' for California)</p>
+    <input type="text" id="statecode" name="statecode" size="2"/>
+    <p>(Approximate) geo-coordinates of the node in Decimal Degrees (required)</p>
+    <input type="text" id="geo" name="geo" value="0,0" required="true" size="20"/>
+    <p>Datacenter where the node is housed</p>
+    <input type="text" id="dc" name="dc" size="40"/>
+    <p>Installation username (needs sudo-rights, required)</p>
+    <input type="text" id="username" name="username" required="true" size="20"/>
+
+    <h3>And finally...</h3>
+    <p>How did you hear about the RING?</p>
+    <textarea id="hear-about" name="hear-about" cols="60" rows="5"></textarea>
+    <p>Remarks</p>
+    <textarea id="remarks" name="remarks" cols="60" rows="10"></textarea>
+
+    <p><input type="submit" value="Send"/></p>
+</form>
