--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -2,7 +2,7 @@
 
     <h3>Participant information</h3>
     <p>Company name (required)</p>
-    <input type="text" id="company" name=company" required="true" size="40"/>
+    <input type="text" id="company" name="company" required="true" size="40"/>
     <p>Company description (for the <a href="/news">news</a> page)</p>
     <textarea id="companydesc" name="companydesc" cols="60" rows="5"></textarea>
     <p>Company website (required)</p>
