--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -23,10 +23,10 @@
     <input type="text" id="ipv6" name="ipv6" required="true" size="40"/>
     <p>IPv4 address</p>
     <input type="text" id="ipv4" name="ipv4" size="40"/>
-    <p>ISO 3166-1 alpha-2 country code (e.g. 'NL', required)</p>
+    <p>ISO 3166-1 alpha-2 country code (e.g. <i>NL</i> for The Netherlands, required)</p>
     <select id="countrycode" name="countrycode" required="true">
     </select>
-    <p>ISO 3166-2 state code (e.g. 'CA' for California)</p>
+    <p>ISO 3166-2 state code (e.g. <i>CA</i> for California)</p>
     <input type="text" id="statecode" name="statecode" size="2"/>
     <p>(Approximate) geo-coordinates of the node in Decimal Degrees (required)</p>
     <input type="text" id="geo" name="geo" value="0,0" required="true" size="20"/>
