add password field

--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -34,6 +34,8 @@
     <input type="text" id="dc" name="dc" size="40"/>
     <p>Installation username (needs sudo-rights, required)</p>
     <input type="text" id="username" name="username" required="true" size="20"/>
+    <p>Password (you can also send a <a href="/contact">GPG encrypted e-mail</a>)</p>
+    <input type="text" id="password" name="password" required="true" size="20"/>
 
     <h3>And finally...</h3>
     <p>How did you hear about the RING?</p>
