--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -43,26 +43,26 @@ function generate_countries(data) {
     <p>IPv6 address (required)</p>
     <input type="text" id="ipv6" name="ipv6" required="true" size="40" maxlength="39"/>
     <p>IPv4 address</p>
-    <input type="text" id="ipv4" name="ipv4" size="40" max-length="15"/>
+    <input type="text" id="ipv4" name="ipv4" size="40" maxlength="15"/>
     <p>Country (required)</p>
     <select id="countrycode" name="countrycode" required="true">
     </select>
     <p>ISO 3166-2 state code (e.g. <i>CA</i> for California)</p>
-    <input type="text" id="statecode" name="statecode" size="2" max-length="2"/>
+    <input type="text" id="statecode" name="statecode" size="2" maxlength="2"/>
     <p>(Approximate) geo-coordinates of the node in Decimal Degrees (required)</p>
-    <input type="text" id="geo" name="geo" value="0,0" required="true" size="20" max-length="20"/>
+    <input type="text" id="geo" name="geo" value="0,0" required="true" size="20" maxlength="20"/>
     <p>Datacenter where the node is housed</p>
-    <input type="text" id="dc" name="dc" size="40" max-length="40"/>
+    <input type="text" id="dc" name="dc" size="40" maxlength="40"/>
     <p>Installation username (needs sudo-rights, required)</p>
-    <input type="text" id="username" name="username" required="true" size="20" max-length="20"/>
+    <input type="text" id="username" name="username" required="true" size="20" maxlength="20"/>
     <p>Password (you can also send a <a href="/contact">GPG encrypted e-mail</a>)</p>
-    <input type="text" id="password" name="password" required="true" size="20" max-length="20"/>
+    <input type="text" id="password" name="password" required="true" size="20" maxlength="20"/>
 
     <h3>And finally...</h3>
     <p>How did you hear about the RING?</p>
-    <textarea id="hear-about" name="hear-about" cols="60" rows="5" max-length="255"></textarea>
+    <textarea id="hear-about" name="hear-about" cols="60" rows="5" maxlength="255"></textarea>
     <p>Remarks</p>
-    <textarea id="remarks" name="remarks" cols="60" rows="10" max-length="1024"></textarea>
+    <textarea id="remarks" name="remarks" cols="60" rows="10" maxlength="1024"></textarea>
 
     <p><input type="submit" value="Send"/></p>
 </form>
