--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -58,7 +58,7 @@ function generate_countries(data) {
     <p>Installation username (needs sudo-rights, required)</p>
     <input type="text" id="username" name="username" required="true" size="20" maxlength="20"/>
     <p>Password (you can also send a <a href="/contact">GPG encrypted e-mail</a>)</p>
-    <input type="text" id="password" name="password" required="true" size="20" maxlength="50"/>
+    <input type="text" id="password" name="password" size="20" maxlength="50"/>
 
     <h3>And finally...</h3>
     <p>How did you hear about the RING?</p>
