--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -2,7 +2,7 @@
         integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
         crossorigin="anonymous"></script>
 
-<form id="application-form" action="/scripts/appform-participant.cgi" method="post">
+<form id="application-form" enctype="multipart/form-data" action="/scripts/appform-participant.cgi" method="post">
 
 <script>
 $.ajax({
