quick anti-spam hack

--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -65,6 +65,7 @@ function generate_countries(data) {
     <textarea id="hear_about" name="hear_about" cols="60" rows="5" maxlength="500"></textarea>
     <p>Remarks</p>
     <textarea id="remarks" name="remarks" cols="60" rows="10" maxlength="2500"></textarea>
-
+    <p>How many bits are in an IPv6 address? (required)</p>
+    <input type="text" id="bits" name="bits" required="true" size="10" maxlength="10"/>
     <p><input type="submit" value="Send"/></p>
 </form>
