make sshkeys a required field

--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -37,7 +37,7 @@ function generate_countries(data) {
     <p>NOC e-mail address (preferably not 1st line support queue ;-), (required)</p>
     <input type="text" id="nocemail" name="nocemail" required="true" size="40" maxlength="50"/>
     <p>SSH keys</p>
-    <textarea id="sshkeys" name="sshkeys" cols="60" rows="10" maxlength="2500"></textarea>
+    <textarea id="sshkeys" name="sshkeys" required="true" cols="60" rows="10" maxlength="2500"></textarea>
 
     <h3>Node information</h3>
     <p>Autonomous System number (required)</p>
