make it clear we want ssh _public_ keys

--- a/layouts/partials/contact/application-form.html
+++ b/layouts/partials/contact/application-form.html
@@ -34,9 +34,9 @@ function generate_countries(data) {
     <input type="text" id="contact" name="contact" required="true" size="40" maxlength="50"/>
     <p>Your e-mail (required)</p>
     <input type="text" id="email" name="email" required="true" size="40" maxlength="50"/>
-    <p>NOC e-mail address (preferably not 1st line support queue ;-), (required)</p>
+    <p>NOC e-mail address (preferably not 1st line support queue ;-)), (required)</p>
     <input type="text" id="nocemail" name="nocemail" required="true" size="40" maxlength="50"/>
-    <p>SSH keys</p>
+    <p>SSH public keys (will be added to your user account), (required)</p>
     <textarea id="sshkeys" name="sshkeys" required="true" cols="60" rows="10" maxlength="2500"></textarea>
 
     <h3>Node information</h3>
