--- a/layouts/partials/participants.html
+++ b/layouts/partials/participants.html
@@ -42,7 +42,7 @@ function generate_html(data) {
         var participant = data.participants[participantsrand[i]];
         var machinelist = [];
         participant['machines'].forEach(function (machine, a) {
-            asnlist.push('<a href="https://api.ring.nlnog.net/1.0/nodes/hostname/' + machine + '.ring.nlnog.net">' + machine + '</a>');
+            machinelist.push('<a href="https://api.ring.nlnog.net/1.0/nodes/hostname/' + machine + '.ring.nlnog.net">' + machine + '</a>');
         });
         var machines = machinelist.join(', ');
         var asnlist = [];
