--- a/layouts/partials/nodes.html
+++ b/layouts/partials/nodes.html
@@ -24,7 +24,7 @@
     $('#nodetable').dataTable( {
 	paging: false,
 	ajax: {
-	   url: '/static/nodes.cgi',
+	   url: '/scripts/nodes.cgi',
            dataSrc: '',
         },
 	fixedHeader: {
