try to fix styling

--- a/layouts/partials/nodes.html
+++ b/layouts/partials/nodes.html
@@ -6,8 +6,8 @@
 
 <p><a href="https://map.ring.nlnog.net/">map.ring.nlnog.net</a> shows al NLNOG RING nodes on a map.</p>
 
-<table id="nodetable" class="ui celled table">
-	<thead>
+<table id="nodetable" class="ui celled table nodes">
+	<thead class=nodes>
 		<tr>
 			<td>node</td>
 			<td>participant</td>
