--- a/layouts/partials/nodes.html
+++ b/layouts/partials/nodes.html
@@ -9,10 +9,10 @@
 <table id="nodetable" class="ui celled table nodes">
 	<thead class=nodes>
 		<tr class=nodes>
-			<td>node</td>
-			<td>participant</td>
-            <td>IP</td>
-			<td>location</td>
+			<td class=nodes>node</td>
+			<td class=nodes>participant</td>
+            <td class=nodes>IP</td>
+			<td class=nodes>location</td>
 		</tr>
 	</thead>
 </table>
@@ -40,6 +40,3 @@
     })
     });
     </script>
-
-<div id='participants'>
-</div>
